# mouse-poll-rate-tester

./: Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: release.yml
src/: main.rs
